syntax = "proto3";
package desmos.reports.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";
import "cosmos_proto/cosmos.proto";

option go_package = "github.com/desmos-labs/desmos/v3/x/reports/types";

// Report contains the data of a generic report
message Report {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the subspace for which the report has been created
  uint64 subspace_id = 1 [ (gogoproto.customname) = "SubspaceID" ];

  // Id of the report
  uint64 id = 2 [ (gogoproto.customname) = "ID" ];

  // Id of the reason this report has been created for
  uint32 reason_id = 3 [ (gogoproto.customname) = "ReasonID" ];

  // (optional) Message attached to this report
  string message = 4;

  // Address of the reporter
  string reporter = 5;

  // Target of the report
  google.protobuf.Any data = 6;
}

// UserData contains the data of a report about a user
message UserData {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Address of the reported user
  string user = 1;
}

// PostData contains the data of a report about a post
message PostData {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the reported post
  uint64 post_id = 1 [ (gogoproto.customname) = "PostID" ];
}

// Reason contains the data about a reporting reason
message Reason {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // Id of the reason inside the subspace
  uint32 id = 1 [ (gogoproto.customname) = "ID" ];

  // Title of the reason
  string title = 2;

  // (optional) Extended description of the reason and the cases it applies to
  string description = 3;
}

// Params contains the module parameters
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = true;

  // List of available reasons from which new subspaces can pick their default
  // ones
  repeated Reason reasons = 1 [ (gogoproto.nullable) = false ];
}